--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -1,11 +1,4 @@
-/* .album-page {
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row-reverse;
-	justify-content: space-around;
-	align-items: center;
-} */
+@import 'var.css';
 
 .album-page {
 	display: grid;
@@ -37,7 +30,7 @@
 	position: relative;
 	width: 250px;
 	height: 187.5px;
-	/* border: 4px solid white; */
+	/* border: 4px solid var(--color-secondary); */
 	overflow: hidden;
 }
 
@@ -46,7 +39,7 @@
 	position: relative;
 	width: 250px;
 	height: 187.5px;
-	/* border: 4px solid white; */
+	/* border: 4px solid var(--color-secondary); */
 	overflow: hidden;
 	background-color: none;
 }
@@ -140,7 +133,7 @@
 }
 
 .album-market-button button {
-	background-color: rgba(0, 0, 0);
+	background-color: var(--color-primary);
 	border: none;
 	border-radius: 5px;
 }
@@ -155,11 +148,11 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
-	/* border: 4px solid white; */
+	/* border: 4px solid var(--color-secondary); */
 	overflow: hidden;
-	-webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.37);
-	-moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.37);
-	box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.37);
+	-webkit-box-shadow: 0px 0px 15px 0px rgba( var(--color-primary), 0.37);
+	-moz-box-shadow: 0px 0px 15px 0px rgba( var(--color-primary), 0.37);
+	box-shadow: 0px 0px 15px 0px rgba( var(--color-primary), 0.37);
 	border-radius: 5px;
 }
 
@@ -168,11 +161,11 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
-	/* border: 4px solid white; */
+	/* border: 4px solid var(--color-secondary); */
 	overflow: hidden;
-	-webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.37);
-	-moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.37);
-	box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.37);
+	-webkit-box-shadow: 0px 0px 15px 0px rgba( var(--color-primary), 0.37);
+	-moz-box-shadow: 0px 0px 15px 0px rgba( var(--color-primary), 0.37);
+	box-shadow: 0px 0px 15px 0px rgba( var(--color-primary), 0.37);
 	border-radius: 5px;
 }
 
@@ -193,8 +186,8 @@
 	transform: translate(-50%, -50%);
 	width: 50px;
 	height: 50px;
-	background-color: rgba(255, 255, 255, 1);
-	color: black;
+	background-color: var(--color-secondary);
+	color: var(--color-primary);
 	font-size: 20px;
 	line-height: 75px;
 	text-align: center;
@@ -210,14 +203,14 @@
 	width: 25px;
 	height: 10px;
 	background-color: rgba(255, 255, 255, 0.8);
-	color: rgba(0, 0, 0, 0.8);
+	color: rgba( var(--color-primary), 0.8);
 	font-size: 10px;
 	line-height: 10px;
 	text-align: center;
 	z-index: 1;
 	margin: 0 auto;
-	border-left: 1px solid rgba(0, 0, 0, 0.8);
-	border-top: 1px solid rgba(0, 0, 0, 0.8);
+	border-left: 1px solid rgba( var(--color-primary), 0.8);
+	border-top: 1px solid rgba( var(--color-primary), 0.8);
 	transition: 2s;
 }
 
@@ -228,7 +221,7 @@
 	width: 100%;
 	height: 25%;
 	background-color: rgba(255, 255, 255, 0.5);
-	color: black;
+	color: var(--color-primary);
 	font-size: 20px;
 	line-height: 25%;
 	text-align: center;
