--- a/src/styles/albumPage5.css
+++ b/src/styles/albumPage5.css
@@ -1,3 +1,5 @@
+@import 'var.css';
+
 .album-page5-title {
 	grid-column: 1 / 10;
 	text-align: center;
@@ -152,14 +154,14 @@
 	width: 25px;
 	height: 10px;
 	background-color: rgba(255, 255, 255, 0.8);
-	color: rgba(0, 0, 0, 0.8);
+	color: rgba( var(--color-primary), 0.8);
 	font-size: 10px;
 	line-height: 10px;
 	text-align: center;
 	z-index: 1;
 	margin: 0 auto;
-	border-left: 1px solid rgba(0, 0, 0, 0.8);
-	border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+	border-left: 1px solid rgba( var(--color-primary), 0.8);
+	border-bottom: 1px solid rgba( var(--color-primary), 0.8);
 	transition: 2s;
 }
 
