--- a/src/styles/dojangMenu.css
+++ b/src/styles/dojangMenu.css
@@ -1,3 +1,5 @@
+@import 'var.css';
+
 .dojang-menu ul {
 	margin: 0 auto;
 	display: flex;
@@ -15,7 +17,7 @@
 	height: 100%;
 	line-height: 50px;
 	text-align: center;
-	background-color: #212529;
+	background-color: var(--color-primary);
 	transition: all 1s;
 }
 
