--- a/src/styles/fight.css
+++ b/src/styles/fight.css
@@ -1,3 +1,5 @@
+@import 'var.css';
+
 .fight-container {
 	display: flex;
 	flex-direction: column;
@@ -17,7 +19,7 @@
 }
 
 .fight-status__container h3 {
-	color: white;
+	color: var(--color-secondary);
 	font-size: 1.2rem;
 	margin: 0;
 }
@@ -92,7 +94,7 @@
 	border-radius: 3%;
 	width: 110%;
 	height: 80px;
-	border: 1px solid white;
+	border: 1px solid var(--color-secondary);
 }
 
 .fight-buttons-others button{
@@ -102,7 +104,7 @@
 	font-size: 8px;
 	padding: 0;
 	margin-top: 10px;
-	border: 1px solid white;
+	border: 1px solid var(--color-secondary);
 }
 
 .fight-timer {
@@ -129,8 +131,8 @@
 	height: max-content;
 	padding: 10px;
 	border-radius: 3%;
-	background-color: #212529;
-	border: 1px solid white;
+	background-color: var(--color-primary);
+	border: 1px solid var(--color-secondary);
 }
 
 .fight-mode-container {	
@@ -145,6 +147,6 @@
 	height: max-content;
 	padding: 5px;
 	border-radius: 3%;
-	background-color: #ffffff;
-	color: #212529;
+	background-color: var(--color-secondary);
+	color: var(--color-primary);
 }
