--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,12 +1,14 @@
+@import 'var.css';
+
 .footer-container {
-	background-color: #212529;
+	background-color: var(--color-primary);
 	height: 30px;
 	text-align: center;
 	width: 100%;
 }
 
 .footer-link {
-	color: #fff;
+	color: var(--color-secondary);
 	text-decoration: none;
 	font-size: 1.2em;
 	font-weight: bold;
