--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,5 @@
+@import 'var.css';
+
 .home {
 	display: flex;
 	flex-direction: column;
@@ -25,7 +27,7 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	background-color: #212529;
+	background-color: var(--color-primary);
 }
 
 .home__description-container--icon {
