--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,5 +1,7 @@
+@import 'var.css';
+
 .login-section {
-	background-color: #fff;
+	background-color: var(--color-secondary);
 	border: 5px double rgba(13, 65, 164, 0.5);
 	border-radius: 11px;
 	margin: 0 auto;
@@ -9,7 +11,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	color: #212529;
+	color: var(--color-primary);
 	/* double border */
 }
 
@@ -35,7 +37,7 @@
 
 .login-form label {
 	display: block;
-	color: black;
+	color: var(--color-primary);
 	text-align: center;
 }
 
@@ -44,8 +46,8 @@
 	font-size: 14px;
 	border-width: 1px;
 	border-color: #fbf9f9;
-	background-color: #ffffff;
-	color: #212529;
+	background-color: var(--color-secondary);
+	color: var(--color-primary);
 	border-style: solid;
 	border-radius: 20px;
 	box-shadow: 0px 0px 5px rgba(66, 66, 66, 0.75);
@@ -55,8 +57,8 @@
 .login-form button {
 	grid-column: 1 / 3;
 	width: max-content;
-	color: white;
-	background-color: #212529;
+	color: var(--color-secondary);
+	background-color: var(--color-primary);
 	margin: 0 auto;
 	margin-top: 10px;
 }
@@ -68,12 +70,12 @@
 .login-section p {
 	font-size: 14px;
 	margin-bottom: 20px;
-	color: #212529;
+	color: var(--color-primary);
 	text-align: center;
 }
 
 .login-section a {
-	color: #212529;
+	color: var(--color-primary);
 	text-decoration: none;
 	font-weight: bold;
 }
