--- a/src/styles/market.css
+++ b/src/styles/market.css
@@ -1,3 +1,5 @@
+@import 'var.css';
+
 .market-section {
 	padding-bottom: 30px;
 }
@@ -25,7 +27,7 @@
 
 .market-link {
 	text-decoration: none;
-	color: black;
+	color: var(--color-primary);
 	background-color: #f5f5f5;
 	padding: 10px;
 	border-radius: 5px;
@@ -41,7 +43,7 @@ width: max-content;
 margin: 0 auto;
 padding: 10px;
 border-radius: 5px;
-color: white;
+color: var(--color-secondary);
 font-size: 20px;
 /* no pasarse del ancho de la pantalla */
 max-width: 80%;
