--- a/src/styles/newPack.css
+++ b/src/styles/newPack.css
@@ -1,3 +1,5 @@
+@import 'var.css';
+
 .album-sticker  .album-image-clicked-back {
 	transform: rotateY(90deg);
     transition: all ease-in 0.5s;
@@ -70,7 +72,7 @@
 
 .new-pack-border {	
 	position: relative;
-	border: 4px solid white;
+	border: 4px solid var(--color-secondary);
 	width: calc(100% - 8px );
 	height: calc(100% - 8px);
 	transition: 1s ease-out; 
@@ -79,7 +81,7 @@
 
 .album-sticker-border {
 	position: relative;
-	border: 4px solid white;
+	border: 4px solid var(--color-secondary);
 	width: calc(100% - 8px );
 	height: calc(100% - 8px);
 	transition: 1s ease-out; 
