--- a/src/styles/quiz.css
+++ b/src/styles/quiz.css
@@ -1,3 +1,5 @@
+@import 'var.css';
+
 .quiz-container {
 	display: flex;
 	flex-direction: column;
@@ -22,7 +24,7 @@
 
 .quiz-selection button {
 	width: 100%;
-	color: #212529;
+	color: var(--color-primary);
 	border: none;
 }
 
@@ -31,8 +33,7 @@
 }
 
 .btn-yellow-stripe {
-	
-    background: rgb(255, 255, 255);
+    background: white;
     background: linear-gradient(
         90deg,
         rgba(255, 255, 255, 1) 71%,
@@ -74,14 +75,14 @@
 .btn-black-stripe {
 	background: rgb(220,53,69);
 	background: linear-gradient(90deg, rgba(220,53,69,1) 71%, rgba(33,37,41,1) 74%);
-	color: white !important;
+	color: var(--color-secondary) !important;
 	cursor: default;
 	opacity: 0.5;
 }
 
 .btn-black {
 	background-color: rgba(33, 37, 41, 1);
-	color: white !important; 
+	color: var(--color-secondary) !important; 
 }
 
 .quiz-questions-title {
@@ -106,7 +107,7 @@
     height: min-content;
     border-radius: 15px;
     padding: 20px;
-    box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 42px 0px rgba( var(--color-primary), 0.75);
 	font-size: 1.3rem;
 }
 
@@ -130,7 +131,7 @@
 
 .quiz-answer-buttons button {
 	width: 100%;
-	background-color: #212529;
+	background-color: var(--color-primary);
 	border: none;
 	font-weight: normal;
 	padding: 0.8rem;
@@ -185,7 +186,7 @@
 .quiz-button-back button {
 	margin-top: 0.8rem;
 	font-size: 1.0rem;
-	background-color: #212529;
+	background-color: var(--color-primary);
 	border: none;
 	margin-bottom: 0.8rem;
 }
