--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -1,5 +1,7 @@
+@import 'var.css';
+
 .register {
-	background-color: #fff;
+	background-color: var(--color-secondary);
 	border: 5px double rgba(13, 65, 164, 0.5);
 	border-radius: 11px;
 	margin: 0 auto;
@@ -21,20 +23,20 @@
 .register h1 {
 	font-size: 30px;
 	margin-bottom: 20px;
-	color: #212529;
+	color: var(--color-primary);
 	text-align: center;
 }
 
 .register label {
 	display: block;
-	color: black;
+	color: var(--color-primary);
 	text-align: center;
 }
 
 .register button {
 	width: min-content;
-	color: white;
-	background-color: #212529;
+	color: var(--color-secondary);
+	background-color: var(--color-primary);
 	margin: 0 auto;
 	margin-top: 10px;
 }
@@ -46,12 +48,12 @@
 .register p {
 	font-size: 14px;
 	margin-bottom: 20px;
-	color: #212529;
+	color: var(--color-primary);
 	text-align: center;
 }
 
 .register a {
-	color: #212529;
+	color: var(--color-primary);
 	text-decoration: none;
 	font-weight: bold;
 }
@@ -74,8 +76,8 @@
 	font-size: 14px;
     border-width: 1px;
     border-color: #fbf9f9;
-    background-color: #ffffff;
-    color: #212529;
+    background-color: var(--color-secondary);
+    color: var(--color-primary);
     border-style: solid;
     border-radius: 20px;
     box-shadow: 0px 0px 5px rgba(66,66,66,.75);
@@ -87,7 +89,7 @@
 }
 
 .register-form-inputs label {
-	color: #212529;
+	color: var(--color-primary);
 	text-align: center;
 }
 
@@ -102,7 +104,7 @@
 .register-avatar-boxes h2 {
 	grid-column: 1 / 5;
 	grid-row: 1;
-	color: #212529;
+	color: var(--color-primary);
 	text-align: center;
 }
 
@@ -159,8 +161,8 @@
 		font-size: 12px;
 		border-width: 1px;
 		border-color: #fbf9f9;
-		background-color: #ffffff;
-		color: #212529;
+		background-color: var(--color-secondary);
+		color: var(--color-primary);
 		border-style: solid;
 		border-radius: 20px;
 		box-shadow: 0px 0px 5px rgba(66,66,66,.75);
@@ -192,8 +194,8 @@
 
 	.register button {
 		width: min-content;
-		color: white;
-		background-color: #212529;
+		color: var(--color-secondary);
+		background-color: var(--color-primary);
 		margin: 0 auto;
 		margin-top: 5px;
 	}
