memory game css renamed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@
 @import 'login.css';
 @import 'main.css';
 @import 'market.css';
-@import 'memoryGame.css';
+@import 'MemoryGame.css';
 @import 'menu.css';
 @import 'newPack.css';
 @import 'patternSelector.css';
