--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -11,6 +11,22 @@
 	padding-bottom: 40px;
 }
 
+.album-page-title {
+	text-align: center;
+	padding-top: 20px;
+}
+
+.expanded {
+	display: grid;
+	width: 100%;
+	height: 1500px;
+	/* 12 columnas iguales y 12 filas iguales */
+	grid-template-columns: repeat(24, calc(100% / 24));
+	grid-template-rows: repeat(24, calc(100% / 24));
+	margin: 0 auto;
+	padding-bottom: 40px;
+}
+
 .album-page1-bg {
 	/* background-image: url("https://media.istockphoto.com/id/502451497/photo/dark-blue-aluminum-background.jpg?b=1&s=170667a&w=0&k=20&c=9SxDAN3Sl5V7_n9GcakkfF54G3U67tPnk7VkLa160Wk=");
 	background-size: fixed; */
@@ -150,9 +166,9 @@
 	height: 100%;
 	/* border: 4px solid var(--color-secondary); */
 	overflow: hidden;
-	-webkit-box-shadow: 0px 0px 15px 0px rgba( var(--color-primary), 0.37);
-	-moz-box-shadow: 0px 0px 15px 0px rgba( var(--color-primary), 0.37);
-	box-shadow: 0px 0px 15px 0px rgba( var(--color-primary), 0.37);
+	-webkit-box-shadow: 0px 0px 15px 0px rgba( 33, 37, 41, 0.37);
+	-moz-box-shadow: 0px 0px 15px 0px rgba( 33, 37, 41, 0.37);
+	box-shadow: 0px 0px 15px 0px rgba( 33, 37, 41, 0.37);
 	border-radius: 5px;
 }
 
@@ -163,9 +179,9 @@
 	height: 100%;
 	/* border: 4px solid var(--color-secondary); */
 	overflow: hidden;
-	-webkit-box-shadow: 0px 0px 15px 0px rgba( var(--color-primary), 0.37);
-	-moz-box-shadow: 0px 0px 15px 0px rgba( var(--color-primary), 0.37);
-	box-shadow: 0px 0px 15px 0px rgba( var(--color-primary), 0.37);
+	-webkit-box-shadow: 0px 0px 15px 0px rgba(33, 37, 41, 0.37);
+	-moz-box-shadow: 0px 0px 15px 0px rgba(33, 37, 41, 0.37);
+	box-shadow: 0px 0px 15px 0px rgba(33, 37, 41, 0.37);
 	border-radius: 5px;
 }
 
@@ -203,14 +219,14 @@
 	width: 25px;
 	height: 10px;
 	background-color: rgba(255, 255, 255, 0.8);
-	color: rgba( var(--color-primary), 0.8);
+	color: rgba( 33, 37, 41, 0.8);
 	font-size: 10px;
 	line-height: 10px;
 	text-align: center;
 	z-index: 1;
 	margin: 0 auto;
-	border-left: 1px solid rgba( var(--color-primary), 0.8);
-	border-top: 1px solid rgba( var(--color-primary), 0.8);
+	border-left: 1px solid rgba(33, 37, 41, 0.8);
+	border-top: 1px solid rgba(33, 37, 41, 0.8);
 	transition: 2s;
 }
 
@@ -228,6 +244,8 @@
 	z-index: 1;
 }
 
+
+
 @media (max-width: 768px) {
 	.album-page {
 		display: grid;
@@ -244,5 +262,28 @@
 		transform: none;
 		transition: 0;
 		z-index: 0;
+	}
+
+	.sticker-expanded {
+		width: 350px;
+		height: 350px;
+	}
+	
+	.sticker-expanded-vertical {
+		width: 300px;
+		height: 500px;
+	}
+	
+	
+	.expanded {
+		height: calc(100vh - 100px);
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	
+	.sticker-hidden {
+		display: none;
 	}
 }
