--- a/src/styles/challenges.css
+++ b/src/styles/challenges.css
@@ -86,7 +86,7 @@
 .TodoItem-p--complete {
     text-decoration: line-through;
     /* opacity: 0.5; */
-	color:rgba( var(--color-primary), 0.329);
+	color:rgba(33, 37, 41, 0.329);
 	
 }
 
