--- a/src/styles/quiz.css
+++ b/src/styles/quiz.css
@@ -107,7 +107,7 @@
     height: min-content;
     border-radius: 15px;
     padding: 20px;
-    box-shadow: 10px 10px 42px 0px rgba( var(--color-primary), 0.75);
+    box-shadow: 10px 10px 42px 0px rgba(33, 37, 41, 0.75);
 	font-size: 1.3rem;
 }
 
