--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -267,16 +267,23 @@
 	.sticker-expanded {
 		width: 350px;
 		height: 350px;
+		box-shadow: 0px 0px 15px 0px rgba(33, 37, 41, 0.5);
+		margin-top: 20px;
+		transition-duration: 0s !important;
+		
+
 	}
-	
+
 	.sticker-expanded-vertical {
-		width: 300px;
-		height: 500px;
-	}
-	
-	
-	.expanded {
+		margin-top: 40px;
+		width: 350px;
 		height: calc(100vh - 100px);
+		box-shadow: 0px 0px 15px 0px rgba(33, 37, 41, 0.5);
+		transition-duration: 0s !important;
+	}
+
+	.expanded {
+		height: max-content;
 		width: 100%;
 		display: flex;
 		align-items: center;
