--- a/src/styles/albumPageTEST.css
+++ b/src/styles/albumPageTEST.css
@@ -1,14 +1,13 @@
-@import 'var.css';
+/* @import 'var.css';
 
 .album-page {
-	display: grid;
-	width: 100%;
-	height: 1500px;
-	/* 12 columnas iguales y 12 filas iguales */
-	grid-template-columns: repeat(24, calc(100% / 24));
-	grid-template-rows: repeat(24, calc(100% / 24));
+	width: 80%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 	margin: 0 auto;
-	padding-bottom: 40px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .album-page-title {
@@ -16,94 +15,10 @@
 	padding-top: 20px;
 }
 
-.expanded {
-	display: grid;
-	width: 100%;
-	height: 1500px;
-	/* 12 columnas iguales y 12 filas iguales */
-	grid-template-columns: repeat(24, calc(100% / 24));
-	grid-template-rows: repeat(24, calc(100% / 24));
-	margin: 0 auto;
-	padding-bottom: 40px;
-}
-
-.album-page1-bg {
-	/* background-image: url("https://media.istockphoto.com/id/502451497/photo/dark-blue-aluminum-background.jpg?b=1&s=170667a&w=0&k=20&c=9SxDAN3Sl5V7_n9GcakkfF54G3U67tPnk7VkLa160Wk=");
-	background-size: fixed; */
-}
-
-.new-pack {
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row-reverse;
-	justify-content: space-around;
-	align-items: center;
-}
-
-.new-sticker {
-	display: inline-block;
-	position: relative;
-	width: 250px;
-	height: 187.5px;
-	/* border: 4px solid var(--color-secondary); */
-	overflow: hidden;
-}
-
-.new-sticker-vertical {
-	display: inline-block;
-	position: relative;
-	width: 250px;
-	height: 187.5px;
-	/* border: 4px solid var(--color-secondary); */
-	overflow: hidden;
-	background-color: none;
-}
-
-.new-sticker-circular {
-	display: inline-block;
-	position: relative;
-	width: 250px;
-	height: 187.5px;
-	border: none;
-	overflow: hidden;
-	border-radius: 50%;
-}
-
-.sticker1 {
-	grid-column: 10 / 17;
-	grid-row: 2 / 8;
-}
-
 .sticker-pasted:hover {
 	transform: scale(1.2);
 	transition: 0.5s;
 	z-index: 1;
-}
-
-.sticker2 {
-	grid-column: 10 / 16;
-	grid-row: 9 / 15;
-}
-
-.sticker3 {
-	grid-column: 2 / 9;
-	grid-row: 7 / 11;
-}
-
-.sticker4 {
-	grid-column: 17 / 24;
-	grid-row: 7 / 11;
-}
-
-.sticker5 {
-	grid-column: 2 / 9;
-	grid-row: 12 / 18;
-}
-
-.sticker6 {
-	grid-column: 7 / 13;
-	grid-row: 19 /25;
 }
 
 .sticker6 .album-sticker-vertical .album-sticker-border {
@@ -118,11 +33,6 @@
 	border-radius: 0;
 }
 
-.sticker7 {
-	grid-column: 13 / 19;
-	grid-row: 19 / 25;
-}
-
 .sticker7 .album-sticker-vertical .album-sticker-border {
 	border-left: none !important;
 	border-top-left-radius: 0;
@@ -132,11 +42,6 @@
 .sticker7 .album-sticker-vertical {
 	border-left: none !important;
 	border-radius: 0;
-}
-
-.sticker8 {
-	grid-column: 17 / 24;
-	grid-row: 12 / 18;
 }
 
 .album-market-button {
@@ -162,22 +67,22 @@
 .album-sticker {
 	display: inline-block;
 	position: relative;
-	width: 100%;
-	height: 100%;
-	/* border: 4px solid var(--color-secondary); */
+	width: 250px;
+	height: 250px;
+
 	overflow: hidden;
 	-webkit-box-shadow: 0px 0px 15px 0px rgba( 33, 37, 41, 0.37);
 	-moz-box-shadow: 0px 0px 15px 0px rgba( 33, 37, 41, 0.37);
 	box-shadow: 0px 0px 15px 0px rgba( 33, 37, 41, 0.37);
 	border-radius: 5px;
-}
+	margin: 20px;
+}  
 
 .album-sticker-vertical {
 	display: inline-block;
 	position: relative;
-	width: 100%;
-	height: 100%;
-	/* border: 4px solid var(--color-secondary); */
+	width: 200px;
+	height: 300px;
 	overflow: hidden;
 	-webkit-box-shadow: 0px 0px 15px 0px rgba(33, 37, 41, 0.37);
 	-moz-box-shadow: 0px 0px 15px 0px rgba(33, 37, 41, 0.37);
@@ -188,12 +93,24 @@
 .album-sticker-circular {
 	display: inline-block;
 	position: relative;
-	width: 100%;
-	height: 100%;
+	width: 250px;
+	height: 250px;
 	border: none;
 	overflow: hidden;
 	border-radius: 50%;
+	margin: 20px;
 }
+
+.sticker6 {
+	order: 6;
+	
+}
+
+.sticker7 {
+	order: 7;
+	
+}
+
 
 .album-sticker-number {
 	position: absolute;
@@ -248,14 +165,33 @@
 
 @media (max-width: 768px) {
 	.album-page {
-		display: grid;
 		width: 100%;
-		height: 500px;
-		/* 12 columnas iguales y 12 filas iguales */
-		grid-template-columns: repeat(24, calc(100% / 24));
-		grid-template-rows: repeat(24, calc(100% / 24));
-		margin: 0 auto;
-		padding-top: 10px;
+	}
+
+	.sticker6 {
+		
+		
+	}
+	
+	.sticker7 {
+		
+		
+	}
+
+	.album-sticker {
+		width: 150px;
+		height: 150px;
+	}
+
+	.album-sticker-vertical {
+		width: 120px;
+		height: 200px;
+	}
+
+	.album-sticker-circular {
+		width: 200px;
+		height: 200px;
+		border-radius: 50%;
 	}
 
 	.sticker-pasted:hover {
@@ -268,10 +204,7 @@
 		width: 350px;
 		height: 350px;
 		box-shadow: 0px 0px 15px 0px rgba(33, 37, 41, 0.5);
-		margin-top: 20px;
-		transition-duration: 0s !important;
-		
-
+		margin-top: 40px;
 	}
 
 	.sticker-expanded-vertical {
@@ -279,7 +212,6 @@
 		width: 350px;
 		height: calc(100vh - 100px);
 		box-shadow: 0px 0px 15px 0px rgba(33, 37, 41, 0.5);
-		transition-duration: 0s !important;
 	}
 
 	.expanded {
@@ -289,8 +221,9 @@
 		align-items: center;
 		justify-content: center;
 	}
+
 	
 	.sticker-hidden {
 		display: none;
 	}
-}
+} */
