--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -30,10 +30,7 @@ body {
 
 .swiper-container {
 	width: 100%;
-	max-width: 100%;
-	max-height: 100%;
-	min-height: 0;
-	min-width: 0;
+	height: 100%;
 }
 
 .swiper-container-new-pack {
@@ -43,6 +40,12 @@ body {
 	min-height: 0;
 	min-width: 0;
 	margin-bottom: 50px;
-	
   }
+
+/* @media screen and (max-width: 768px) {
+	.swiper-container {
+		height: 1300px;
+	}
+} */
+	
 
