--- a/src/styles/newPack.css
+++ b/src/styles/newPack.css
@@ -89,3 +89,41 @@
 	border-radius: 5px;
 
 }
+
+.new-pack {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row-reverse;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.new-sticker {
+	display: inline-block;
+	position: relative;
+	width: 250px;
+	height: 187.5px;
+	/* border: 4px solid var(--color-secondary); */
+	overflow: hidden;
+}
+
+.new-sticker-vertical {
+	display: inline-block;
+	position: relative;
+	width: 250px;
+	height: 187.5px;
+	/* border: 4px solid var(--color-secondary); */
+	overflow: hidden;
+	background-color: none;
+}
+
+.new-sticker-circular {
+	display: inline-block;
+	position: relative;
+	width: 250px;
+	height: 187.5px;
+	border: none;
+	overflow: hidden;
+	border-radius: 50%;
+}
