--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,19 +1,19 @@
-@import 'var.css';
+@import "var.css";
 
 body {
-    font-family: "Montserrat", Arial, Helvetica, sans-serif;
-    background: var(--gradient-first);
-    background: -webkit-linear-gradient(
-        to right,
-        var(--gradient-first),
+	font-family: "Montserrat", Arial, Helvetica, sans-serif;
+	background: var(--gradient-first);
+	background: -webkit-linear-gradient(
+		to right,
+		var(--gradient-first),
 		var(--gradient-second)
-    );
-    background: linear-gradient(
-        to right,
-        var(--gradient-first),
-        var(--gradient-second)
-    );
-    color: var(--color-secondary);
+	);
+	background: linear-gradient(
+		to right,
+		var(--gradient-first),
+		var(--gradient-second)
+	);
+	color: var(--color-secondary);
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -40,12 +40,251 @@ body {
 	min-height: 0;
 	min-width: 0;
 	margin-bottom: 50px;
-  }
+}
 
-/* @media screen and (max-width: 768px) {
-	.swiper-container {
-		height: 1300px;
+/* LOADER */
+
+.lds-spinner {
+	color: official;
+	margin: 0 auto;
+	position: relative;
+	width: 80px;
+	height: 80px;
+	padding-top: 20px;
+}
+.lds-spinner div {
+	transform-origin: 40px 40px;
+	animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+	content: " ";
+	display: block;
+	position: absolute;
+	top: 3px;
+	left: 37px;
+	width: 6px;
+	height: 18px;
+	border-radius: 20%;
+	background: #fff;
+}
+.lds-spinner div:nth-child(1) {
+	transform: rotate(0deg);
+	animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+	transform: rotate(30deg);
+	animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+	transform: rotate(60deg);
+	animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+	transform: rotate(90deg);
+	animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+	transform: rotate(120deg);
+	animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+	transform: rotate(150deg);
+	animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+	transform: rotate(180deg);
+	animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+	transform: rotate(210deg);
+	animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+	transform: rotate(240deg);
+	animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+	transform: rotate(270deg);
+	animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+	transform: rotate(300deg);
+	animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+	transform: rotate(330deg);
+	animation-delay: 0s;
+}
+@keyframes lds-spinner {
+	0% {
+		opacity: 1;
 	}
-} */
-	
+	100% {
+		opacity: 0;
+	}
+}
 
+.lds-ring {
+	display: inline-block;
+	position: relative;
+	width: 35px;
+	height: 35px;
+}
+.lds-ring div {
+	box-sizing: border-box;
+	display: block;
+	position: absolute;
+	width: 35px;
+	height: 35px;
+	margin: 8px;
+	border: 8px solid #fff;
+	border-radius: 50%;
+	animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+	border-color: #fff transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+	animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+	animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+	animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+.lds-ripple-small {
+	display: inline-block;
+	position: relative;
+	width: 35px;
+	height: 35px;
+}
+.lds-ripple-small div {
+	position: absolute;
+	border: 4px solid #fff;
+	opacity: 1;
+	border-radius: 50%;
+	animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple-small div:nth-child(2) {
+	animation-delay: -0.5s;
+}
+
+@keyframes lds-ripple {
+	0% {
+		top: 16px;
+		left: 16px;
+		width: 0;
+		height: 0;
+		opacity: 0;
+	}
+	4.9% {
+		top: 16px;
+		left: 16px;
+		width: 0;
+		height: 0;
+		opacity: 0;
+	}
+	5% {
+		top: 16px;
+		left: 16px;
+		width: 0;
+		height: 0;
+		opacity: 1;
+	}
+	100% {
+		top: 0px;
+		left: 0px;
+		width: 32px;
+		height: 32px;
+		opacity: 0;
+	}
+}
+
+@keyframes ldio-4j9eyrs77kq-r {
+	0%,
+	100% {
+		animation-timing-function: cubic-bezier(0.2 0 0.8 0.8);
+	}
+	50% {
+		animation-timing-function: cubic-bezier(0.2 0.2 0.8 1);
+	}
+	0% {
+		transform: rotate(0deg);
+	}
+	50% {
+		transform: rotate(180deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+@keyframes ldio-4j9eyrs77kq-s {
+	0%,
+	100% {
+		animation-timing-function: cubic-bezier(0.2 0 0.8 0.8);
+	}
+	50% {
+		animation-timing-function: cubic-bezier(0.2 0.2 0.8 1);
+	}
+	0% {
+		transform: translate(-30px, -30px) scale(0);
+	}
+	50% {
+		transform: translate(-30px, -30px) scale(1);
+	}
+	100% {
+		transform: translate(-30px, -30px) scale(0);
+	}
+}
+.ldio-4j9eyrs77kq > div {
+	transform: translate(0px, -15px);
+}
+.ldio-4j9eyrs77kq > div > div {
+	animation: ldio-4j9eyrs77kq-r 1s linear infinite;
+	transform-origin: 100px 100px;
+}
+.ldio-4j9eyrs77kq > div > div > div {
+	position: absolute;
+	transform: translate(100px, 82px);
+}
+.ldio-4j9eyrs77kq > div > div > div > div {
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	background: #fe718d;
+	animation: ldio-4j9eyrs77kq-s 1s linear infinite;
+}
+.ldio-4j9eyrs77kq > div > div:last-child {
+	animation-delay: -0.5s;
+}
+.ldio-4j9eyrs77kq > div > div:last-child > div > div {
+	animation-delay: -0.5s;
+	background: #46dff0;
+}
+.loadingio-spinner-interwind-rsplu6pobz {
+	width: 200px;
+	height: 200px;
+	
+	overflow: hidden;
+	margin: 0 auto;
+	
+}
+.ldio-4j9eyrs77kq {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	transform: translateZ(0) scale(1);
+	backface-visibility: hidden;
+	transform-origin: 0 0; /* see note above */
+}
+.ldio-4j9eyrs77kq div {
+	box-sizing: content-box;
+}
