--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -35,11 +35,16 @@
 
 .album-market-button {
 	display: flex;
-	justify-content: flex-end;
-	padding-right: 20px;
-	font-size: 20px;
+	justify-content: space-between;
+	font-size: 15px;
 	text-align: center;
+	width: 90%;
+	margin: 0 auto;
 	margin-bottom: 20px;
+}
+
+.album-market-button button {
+	width: 40%;
 }
 
 .album-repeats-button {
