--- a/src/styles/market.css
+++ b/src/styles/market.css
@@ -98,6 +98,20 @@
 	
 }
 
+.market-claim-rewards {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	background-color: red;
+	color: var(--color-secondary);
+	border-radius: 5px;
+	padding: 10px;
+}
+
+.market-claim-points-button:disabled {
+	color: #fff;
+	cursor: not-allowed;
+}
+
 @media screen and (max-width: 768px) {
 	.album-percentage {
 		width: 80%;
