--- a/src/styles/repeats.css
+++ b/src/styles/repeats.css
@@ -1,7 +1,8 @@
 .repeats h1 {
+	width: 100%;
 	text-align: center;
 	margin: 0;
-	padding-top: 20px;
+	padding-top: 5px;
 }
 
 .repeats {
@@ -17,7 +18,6 @@
 	margin: 0 auto;
 	gap: 20px;
 	padding-top: 20px;
-	
 }
 
 .repeats-quantity {
@@ -44,15 +44,6 @@
 	line-height: 200px;
 	text-align: center;
 	z-index: 1;
-}
-
-.repeats-expanded {
-}
-
-.repeats-expanded-verical {
-}
-
-.repeats-hidden {
 }
 
 .repeats-sticker {
@@ -136,9 +127,231 @@
 }
 
 .album-repeats-button {
-	width: 80%;
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	margin: 0 auto;
+	margin-bottom: 20px;
+}
+
+.album-repeats-button button {
+	font-size: 12px;
+	padding: 8px;
+	width: 110px;
+}
+
+.repeats-exchange-container {
+	width: 100%;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 50px;
+}
+
+.repeats-section {
+	margin-top: 30px;
+	display: flex;
+	flex-direction: column;
+	height: 300px;
+	width: 30%;
+	min-width: max-content;
+	align-items: center;
+	justify-content: space-between;
+	border: 2px solid var(--color-secondary);
+	border-radius: 5px;
+	margin: 30px auto;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	background-color: var(--color-primary);
+}
+
+.repeats-section:nth-of-type(2) {
+	width: max-content;
+	justify-content: center;
+	border: none;
+	margin: 0 30px;
+	background-color: transparent;
+}
+
+.repeats-section:nth-of-type(3) {
+	justify-content: space-between;
+}
+
+.repeats-section i {
+	font-size: 100px;
+	color: var(--color-primary);
+	align-self: center;
+	justify-self: center;
+}
+
+.repeats-section span {
+	font-size: 20px;
+	color: var(--color-secondary);
+	align-self: center;
+	justify-self: center;
+	font-weight: bold;
+}
+
+.exchange-sticker-vertical {
+	position: relative;
+	width: 150px;
+	height: 200px;
+	border: var(--color-secondary) 2px solid;
+	overflow: hidden;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.exchange-sticker {
+	position: relative;
+	width: 150px;
+	height: 150px;
+	border: var(--color-secondary) 2px solid;
+	overflow: hidden;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.exchange-sticker-circular {
+	position: relative;
+	width: 150px;
+	height: 150px;
+	border: var(--color-secondary) 2px solid;
+	overflow: hidden;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	border-radius: 50%;
+}
+
+.exchange-border-golden {
+	border: 2px solid #f8d511;
+	filter: drop-shadow(0px 0px 5px #f8d511);
+	filter: brightness(1.2);
+}
+
+.exchange-choice {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	height: 100%;
+	padding-top: 5px;
+}
+
+.exchange-choice select {
+	width: 175px;
+	background-color: white;
+	border: thin solid blue;
+	border-radius: 4px;
+	display: inline-block;
+	font-size: 14px;
+	line-height: 1.5em;
+	padding: 0em 3.5em 0em 1em;
+
+	/* reset */
+
+	margin: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+
+	background-image: linear-gradient(45deg, transparent 50%, gray 50%),
+		linear-gradient(135deg, gray 50%, transparent 50%),
+		linear-gradient(to right, #ccc, #ccc);
+	background-position: calc(100% - 19px) calc(0.5em + 2px),
+		calc(100% - 15px) calc(0.5em + 2px), calc(100% - 2.5em) 0em;
+	background-size: 5px 5px, 5px 5px, 1px 1.5em;
+	background-repeat: no-repeat;
+}
+
+.exchange-choice select:focus {
+	background-image: linear-gradient(45deg, green 50%, transparent 50%),
+		linear-gradient(135deg, transparent 50%, green 50%),
+		linear-gradient(to right, #ccc, #ccc);
+	background-position: calc(100% - 16px) 0.5em, calc(100% - 20px) 0.5em,
+		calc(100% - 2.5em) 0.5em;
+	background-size: 5px 5px, 5px 5px, 1px 1.5em;
+	background-repeat: no-repeat;
+	border-color: green;
+	outline: 0;
+}
+
+.exchange-confirm {
+	width: 90%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
+	margin-bottom: 30px;
+}
+
+.exchange-confirm p {
+	text-align: center;
+	font-style: italic;
+	margin-top: -20px;
+	color: grey;
+}
+
+.exchange-title {
+	width: 100%;
+}
+
+.exchange-confirm div {
+	display: flex;
+	width: 100%;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.exchange-confirm button {
+	background-color: #0095ff;
+	border: 1px solid transparent;
+	border-radius: 3px;
+	box-shadow: rgba(255, 255, 255, 0.4) 0 1px 0 0 inset;
+	box-sizing: border-box;
+	color: #fff;
+	cursor: pointer;
+	display: inline-block;
+	font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans",
+		sans-serif;
+	font-size: 13px;
+	font-weight: 400;
+	line-height: 1.15385;
+	margin: 0;
+	outline: none;
+	padding: 8px 0.8em;
+	position: relative;
+	text-align: center;
+	text-decoration: none;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	vertical-align: baseline;
+	white-space: nowrap;
+	width: 125px;
+}
+
+.exchange-confirm button:hover,
+.exchange-confirm button:focus {
+	background-color: #07c;
+}
+
+.exchange-confirm button:focus {
+	box-shadow: 0 0 0 4px rgba(0, 149, 255, 0.15);
+}
+
+.exchange-confirm button:active {
+	background-color: #0064bd;
+	box-shadow: none;
+}
+
+.exchange-error-message {
+	color: red !important;
+	font-size: 12px;
+	margin-top: -5px !important;
 }
 
 @media screen and (max-width: 768px) {
@@ -151,7 +364,7 @@
 		padding-top: 20px;
 		padding-bottom: 20px;
 	}
-	
+
 	.repeats-quantity {
 		position: block;
 		width: 100%;
@@ -210,5 +423,144 @@
 		border-left: 1px solid rgba(33, 37, 41, 0.8);
 		border-top: 1px solid rgba(33, 37, 41, 0.8);
 		transition: 2s;
+	}
+
+	.repeats-exchange-container {
+		width: 95%;
+		overflow: hidden;
+		margin: 0 auto;
+	}
+
+	.repeats-section {
+		margin-top: 30px;
+		display: flex;
+		flex-direction: column;
+		height: 250px;
+		width: 100%;
+		min-width: max-content;
+		align-items: center;
+		justify-content: space-between;
+		border: 2px solid var(--color-secondary);
+		border-radius: 5px;
+		margin: 30px auto;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		background-color: var(--color-primary);
+	}
+
+	.repeats-section button {
+		font-size: 10px;
+		width: 100px;
+	}
+
+	.repeats-section:nth-of-type(2) {
+		width: max-content;
+		justify-content: center;
+		border: none;
+		margin: 0 10px;
+		background-color: transparent;
+	}
+
+	.repeats-section:nth-of-type(3) {
+		justify-content: space-between;
+	}
+
+	.repeats-section i {
+		font-size: 30px;
+		color: var(--color-secondary);
+		align-self: center;
+		justify-self: center;
+	}
+
+	.repeats-section span {
+		font-size: 20px;
+		color: var(--color-secondary);
+		align-self: center;
+		justify-self: center;
+		font-weight: bold;
+	}
+
+	.exchange-sticker-vertical {
+		position: relative;
+		width: 100px;
+		height: 150px;
+		border: var(--color-secondary) 2px solid;
+		overflow: hidden;
+		margin-top: 5px;
+		margin-bottom: 5px;
+	}
+
+	.exchange-sticker {
+		position: relative;
+		width: 100px;
+		height: 100px;
+		border: var(--color-secondary) 2px solid;
+		overflow: hidden;
+		margin-top: 5px;
+		margin-bottom: 5px;
+	}
+
+	.exchange-sticker-circular {
+		position: relative;
+		width: 100px;
+		height: 100px;
+		border: var(--color-secondary) 2px solid;
+		overflow: hidden;
+		margin-top: 5px;
+		margin-bottom: 5px;
+		border-radius: 50%;
+	}
+
+	.exchange-border-golden {
+		border: 2px solid #f8d511;
+		filter: drop-shadow(0px 0px 5px #f8d511);
+		filter: brightness(1.2);
+	}
+
+	.exchange-choice {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-between;
+		height: 100%;
+		padding-top: 5px;
+	}
+
+	.exchange-choice select {
+		width: 100px;
+		background-color: white;
+		border: thin solid blue;
+		border-radius: 4px;
+		display: inline-block;
+		font-size: 10px;
+		line-height: 1.5em;
+		padding: 0em 3.5em 0em 1em;
+		/* reset */
+		margin: 0;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+
+		background-image: linear-gradient(45deg, transparent 50%, gray 50%),
+			linear-gradient(135deg, gray 50%, transparent 50%),
+			linear-gradient(to right, #ccc, #ccc);
+		background-position: calc(100% - 19px) calc(0.5em + 2px),
+			calc(100% - 15px) calc(0.5em + 2px), calc(100% - 2.5em) 0em;
+		background-size: 5px 5px, 5px 5px, 1px 1.5em;
+		background-repeat: no-repeat;
+	}
+
+	.exchange-choice select:focus {
+		background-image: linear-gradient(45deg, green 50%, transparent 50%),
+			linear-gradient(135deg, transparent 50%, green 50%),
+			linear-gradient(to right, #ccc, #ccc);
+		background-position: calc(100% - 16px) 0.5em, calc(100% - 20px) 0.5em,
+			calc(100% - 2.5em) 0.5em;
+		background-size: 5px 5px, 5px 5px, 1px 1.5em;
+		background-repeat: no-repeat;
+		border-color: green;
+		outline: 0;
 	}
 }
