--- a/src/styles/trades.css
+++ b/src/styles/trades.css
@@ -96,6 +96,22 @@
 	margin: 0 auto;
 }
 
+.trade-list-item-image div p {
+	color: var(--color-secondary);
+	z-index: 1;
+	position: absolute;
+	width: 100%;
+	top: 50%;
+	left: 50%;
+	margin: 0px;
+	transform: translate(-50%, -50%) rotate(45deg);
+	font-size: 1em; 
+	font-weight: bold;
+	text-transform: uppercase;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 5px;
+}
 
 @media screen and (max-width: 768px) {
 	.trades-main-container h1 {
@@ -220,5 +236,9 @@
 		padding: 5px;
 		width: 100%;
 	}
-	
+
+	.trade-list-item-image div p {
+		font-size: 0.6em;
+		border-radius: 5px;
+	}
 }
