--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -173,7 +173,7 @@
 		display: flex;
 		flex-direction: column;
 		width: 95%;
-		margin: 0 auto;
+		margin: calc(50%) auto;
 		height: 100%;
 		justify-content: center;
 		align-items: center;
